
[ _Updates_ ]

- Directories tree modified
- Initalize script changed to `.initrc`
- `.initrc` will be called considering shebangs
- Fixed `pushd` invalid directories stacking
- Fixed **Lua** security error that allow access to process **owner** field
- **Lua** functions `io.read` and `io.write` now needs to use `/dev/stdin` and `/dev/stdout`
- Removed default parsers commands `vnt`
- Removed simbolic link file `/bin/java`
- Default title for command `view` now is same of Main Window
- **Lua** added function `os.getcwd()` to read current working directory
- MIDlet initial message from file `/etc/motd`
- Improved **File Explorer**
- Merged build tools **Lua**, **Shell Script** and **Packages**, utility `.` consider _shebangs_ to build.
- **Lua** Graphics API - _BuildScreen_ now can build Images from all sources
- Process viewer added new button **Refresh**
- Command `cp` now using raw _byte-array_
- Command `bind` need to read port from argument line, no default port in environment key anymore.
- Source code splited into `OpenTTY.java` (Main Class), `Lua.java` (Lua Runtime) and `MIDletCanvas.java` (Canvas Builder)
- **Font Generator** improved
- **JBenchmark** updated for _1.3_ (Migrated to Lua)
- Fixed a security bug with `case user (any name) ...` command getting root permission
- Command `case` context **FILE** added suppport for all files searching location
- **Lua** added defualt library `java` to minimal direct access and handling from Java VM resources
- **Lua** added function `graphics.render(file)` to get **Image** item
- **Lua** added new _type_ **Image**
- **Screens** _event listener_ no longer passing root to `xterm` command call
- **File Explorer** _Delete_ button don't requesting to remove `..` directory anymore
- **JBuntu** updated to _1.4_

[ _Notes_ ]

- Files writed in **/tmp/** will be deleted when MIDlet closes.
- 

[ _API Nodes_ ]

- `devicefs`: Check if device supports **JSR-75** (_Access to Device File System on `/mnt/`_)